--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ jiter==0.9.0
 oauthlib==3.2.2
 openai==1.66.3
 outcome==1.3.0.post0
+psycopg2-binary==2.9.10
 pydantic==2.10.6
 pydantic_core==2.27.2
 PySocks==1.7.1
