--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ bs4==0.0.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
 distro==1.9.0
+dj-database-url==2.3.0
 Django==5.1.7
 django-cors-headers==4.7.0
 h11==0.14.0
